--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </header>
       <!-- Thumbnail -->
       <section id="thumbnails">
-        <article> <a class="thumbnail" href="images/fulls/01.jpg" data-position="left center"><img
+        <article> <a class="thumbnail" href="images/fulls/01.jpg"><img
 
               src="images/thumbs/01.jpg" alt=""></a>
           <h2>Nome do studio</h2>
