--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </header>
       <!-- Thumbnail -->
       <section id="thumbnails">
-        <article> <a class="thumbnail" href="images/fulls/01.jpg" style="@media screen and (max-width: 480px) {min-width: 320px;}"><img
+        <article> <a class="thumbnail" href="images/fulls/01.jpg" style="max-width: 100%;"><img
 
               src="images/thumbs/01.jpg" alt=""></a>
           <h2>Nome do studio</h2>
