--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         </ul>
       </header>
       <!-- Thumbnail -->
-      <section id="thumbnails">
-        <article> <a class="thumbnail" href="images/fulls/01.jpg" style="max-width: 100%;"><img
+      <section id="thumbnails" style="min-width:100%">
+        <article> <a class="thumbnail" href="images/fulls/01.jpg"><img
 
               src="images/thumbs/01.jpg" alt=""></a>
           <h2>Nome do studio</h2>
