--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </ul>
       </header>
       <!-- Thumbnail -->
-      <section id="thumbnails" style="min-width:100%">
+      <section id="thumbnails" style="max-width:100%">
         <article> <a class="thumbnail" href="images/fulls/01.jpg"><img
 
               src="images/thumbs/01.jpg" alt=""></a>
