--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
         </ul>
       </header>
       <!-- Thumbnail -->
-      <section id="thumbnails" style="max-width:100%">
+      <section id="thumbnails">
         <article> <a class="thumbnail" href="images/fulls/01.jpg"><img
 
               src="images/thumbs/01.jpg" alt=""></a>
           <h2>Nome do studio</h2>
           <p>Informações sobre a foto.</p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/02.jpg"><img src="images/thumbs/02.jpg"
+        <article> <a class="thumbnail" href="images/fulls/02.jpg" data-position="center"><img src="images/thumbs/02.jpg"
 
               alt=""></a>
           <h2>Nome do estudio</h2>
           <p>Informações sobre foto.</p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/03.jpg" data-position="top center"><img
+        <article> <a class="thumbnail" href="images/fulls/03.jpg" data-position="all"><img
 
               src="images/thumbs/03.jpg" alt=""></a>
           <h2>Nome do studio</h2>
