--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
           <h2>Nome do studio</h2>
           <p>Informações sobre a foto.</p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/02.jpg" data-position="center"><img src="images/thumbs/02.jpg"
+        <article> <a class="thumbnail" href="images/fulls/02.jpg"><img src="images/thumbs/02.jpg"
 
               alt=""></a>
           <h2>Nome do estudio</h2>
           <p>Informações sobre foto.</p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/03.jpg" data-position="all"><img
+        <article> <a class="thumbnail" href="images/fulls/03.jpg"><img
 
               src="images/thumbs/03.jpg" alt=""></a>
           <h2>Nome do studio</h2>
